crates/kernel/tests/table/snapshots/main__table__router__toggling_shuffle_leaves_a_pin_the_engine_already_committed_to.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Audio(
            Playhead(
                95s,
            ),
        ),
        [
            Macos(
                SetPosition(
                    95s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 4,
        },
        Cursor {
            index: 0,
            len: 4,
        },
        [],
        Off,
        Shuffle(
            [
                Index(0),
                Index(2),
                Index(1),
                Index(3),
            ],
        ),
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Elapsed(
            Lookahead(
                Revision(
                    0,
                ),
            ),
        ),
        [
            Audio(
                Preload(
                    TrackLoad {
                        path: "/tmp/track2.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
            ),
            Macos(
                SetPosition(
                    95s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: Queued(
                Track {
                    source: Local(
                        "/tmp/track2.flac",
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "track2.flac",
                    tagging: Read(
                        100s,
                    ),
                },
            ),
        },
        None,
        Cursor {
            index: 0,
            len: 4,
        },
        Cursor {
            index: 0,
            len: 4,
        },
        [],
        Off,
        Shuffle(
            [
                Index(0),
                Index(2),
                Index(1),
                Index(3),
            ],
        ),
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Playback(
            ToggleShuffle,
        ),
        [
            Animate(
                PlayOrderChanged,
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: Queued(
                Track {
                    source: Local(
                        "/tmp/track2.flac",
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "track2.flac",
                    tagging: Read(
                        100s,
                    ),
                },
            ),
        },
        None,
        Cursor {
            index: 0,
            len: 4,
        },
        Cursor {
            index: 0,
            len: 4,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Audio(
            TrackChanged,
        ),
        [
            Library(
                AppendHistory(
                    HistoryEntry {
                        track: Local(
                            "/tmp/track2.flac",
                        ),
                        title: "track2",
                        artist: None,
                        at: Moment(
                            0ns,
                        ),
                    },
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track2.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track2.flac",
                            tagging: Read(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
            Macos(
                SetPosition(
                    0ns,
                ),
            ),
            After {
                delay: 90s,
                timer: Lookahead(
                    Revision(
                        2,
                    ),
                ),
            },
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track2.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track2.flac",
                tagging: Read(
                    100s,
                ),
            },
            head: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 2,
            len: 4,
        },
        Cursor {
            index: 2,
            len: 4,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
