crates/kernel/tests/table/snapshots/main__table__router__track_details_shows_the_selected_playlist_track.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                TrackDetails,
            ),
        ),
        One(
            Animate(
                OverlayOpened,
            ),
        ),
        Stopped,
        Some(
            TrackDetails(
                Track {
                    path: "/m/1.flac",
                    duration: Some(
                        100s,
                    ),
                    tags: Tags {
                        title: Some(
                            "Sun Song",
                        ),
                        artist: Some(
                            "Someone",
                        ),
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate_kbps: None,
                        sample_rate_hz: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "Someone — Sun Song",
                    tagging: Read,
                },
            ),
        ),
        Cursor {
            index: 1,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Close,
        ),
        One(
            Animate(
                OverlayClosed,
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 1,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
