crates/kernel/tests/table/snapshots/main__table__router__track_info_falls_back_to_the_playing_track.snap
---
source: crates/kernel/tests/table/router.rs
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                TrackInfo,
            ),
        ),
        One(
            Animate(
                OverlayOpened,
            ),
        ),
        Playing {
            track: Track {
                path: "/m/0.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "0.flac",
                tagging: Read,
            },
            at: 0ns,
            preload: None,
        },
        Some(
            TrackInfo(
                Track {
                    path: "/m/0.flac",
                    duration: Some(
                        100s,
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate_kbps: None,
                        sample_rate_hz: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "0.flac",
                    tagging: Read,
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Close,
        ),
        One(
            Animate(
                OverlayClosed,
            ),
        ),
        Playing {
            track: Track {
                path: "/m/0.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "0.flac",
                tagging: Read,
            },
            at: 0ns,
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
]
